fix: duo too wide on mobile

--- a/src/styles/shib.manchester.ac.uk.scss
+++ b/src/styles/shib.manchester.ac.uk.scss
@@ -48,8 +48,7 @@ h3:last-of-type {
 	display: block;
 	margin: auto;
 	border-radius: 0.5rem;
-	position: absolute;
-	top: 12rem;
+	position: initial;
 }
 #duo_form {
 	height: 0;
